Fix Makefile source path and TOC generation

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -2,9 +2,10 @@ all: decomp.pdf
 
 decomp.pdf: decomp.tex
 	pdflatex decomp.tex
+	pdflatex decomp.tex
 
 decomp.tex: decomp.raw.tex
-	./insert_code.pl decomp.g <decomp.raw.tex >decomp.tex
+	./insert_code.pl ../gap/RepnDecomp.gi <decomp.raw.tex >decomp.tex
 
 .PHONY: clean
 clean:
