--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,76 +1,77 @@
-name: GitHubPagesForGAP
-version: "0.2"
-license: "0BSD"
-date: 2017-02-04
+name: RepnDecomp
+version: "1.0.0"
+license: "GPL-3.0"
+date: 2019-12-14
 description: |
-    A GitHub Pages generator for GAP packages
+    Decompose representations of finite groups into irreducibles
 
 authors:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: A. U. Thor
+    - name: Kaashif Hymabaccus
+      url: https://kaashif.co.uk
 
 maintainers:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: Jan Itor
+    - name: Kaashif Hymabaccus
+      url: https://kaashif.co.uk
 
-GAP: ">=4.8.1"
+contributors:
+    - name: Dmitrii Pasechnik
+
+GAP: ">= 4.10"
 
 needed-pkgs:
     - name: "GAPDoc"
-      version: ">= 1.2"
+      version: ">= 1.6.1"
       url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
-    - name: "IO"
-      version: ">= 4.1"
-      url: "https://gap-packages.github.io/io"
+    - name: "GRAPE"
+      version: ">= 4.8.1"
+      url: "https://gap-packages.github.io/grape"
 
 suggested-pkgs:
-    - name: "orb"
-      version: ">= 4.2"
-      url: "https://gap-packages.github.io/orb"
+    - name: "IO"
+      version: ">= 4.7.0"
+      url: "https://gap-packages.github.io/io"
 
-www: https://gap-system.github.io/GitHubPagesForGAP/
+www: https://gap-packages.github.io/RepnDecomp
 readme: README.md
-packageinfo: https://gap-system.github.io/GitHubPagesForGAP/PackageInfo.g
-github: https://github.com/gap-system/GitHubPagesForGAP
+packageinfo: https://gap-packages.github.io/RepnDecomp/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.gz
+      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.0.0/RepnDecomp-1.0.0.tar.gz
     - name: .tar.bz2
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.bz2
+      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.0.0/RepnDecomp-1.0.0.tar.bz2
 
 abstract: |
-    This is a pseudo package that contains no actual  <span class="pkgname">GAP</span> code. Instead, it is a template for other  GAP packages that allows to quickly setup GitHub Pages.
+    The <span class='pkgname'>RepnDecomp</span> package provides functions implementing various algorithms for decomposing linear representations of finite groups.
 
-status: other
+status: dev
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
 keywords: |
-    GitHub Pages, GAP.
+    representations, groups.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>HTI17</span>]   <b class='BibAuthor'>Horn, M., Thor, A. U. and Itor, J.</b>,
-     <i class='BibTitle'>GitHubPagesForGAP, A GitHub Pages generator for GAP packages,
-             Version 0.2</i>
-     (<span class='BibYear'>2017</span>)<br />
+    [<span class='BibKey'>Hym19</span>]   <b class='BibAuthor'>Hymabaccus, K.</b>,
+     <i class='BibTitle'>RepnDecomp, Decompose representations of finite groups into irreducibles,
+             Version 1.0.0</i>
+     (<span class='BibYear'>2019</span>)<br />
     (<span class='BibNote'>GAP package</span>),
-    <span class='BibHowpublished'><a href="https://gap-system.github.io/GitHubPagesForGAP/">https://gap-system.github.io/GitHubPagesForGAP/</a></span>.
+    <span class='BibHowpublished'><a href="https://gap-packages.github.io/RepnDecomp">https://gap-packages.github.io/RepnDecomp</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ GitHubPagesForGAP0.2,
-      author =           {Horn, M. and Thor, A. U. and Itor, J.},
-      title =            {{GitHubPagesForGAP}, A GitHub Pages generator for GAP packages, {V}ersion 0.2},
-      month =            {Feb},
-      year =             {2017},
+    @misc{ RepnDecomp1.0.0,
+      author =           {Hymabaccus, K.},
+      title =            {{RepnDecomp},   Decompose  representations  of  finite  groups  into
+                          irreducibles, {V}ersion 1.0.0},
+      month =            {Dec},
+      year =             {2019},
       note =             {GAP package},
-      howpublished =     {\href                              {https://gap-system.github.io/GitHubPagesForGAP/}
-                          {\texttt{https://gap-system.github.io/}\discretionary
-                          {}{}{}\texttt{GitHubPagesForGAP/}}},
-      keywords =         {GitHub Pages; GAP},
-      printedkey =       {HTI17}
+      howpublished =     {\href                    {https://gap-packages.github.io/RepnDecomp}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{RepnDecomp}}},
+      keywords =         {representations; groups},
+      printedkey =       {Hym19}
     }
 
