--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,7 +1,7 @@
 name: RepnDecomp
-version: "1.0.1"
+version: "1.1.0"
 license: "GPL-3.0"
-date: 2019-12-14
+date: 2020-02-15
 description: |
     Decompose representations of finite groups into irreducibles
 
@@ -12,9 +12,8 @@ authors:
 maintainers:
     - name: Kaashif Hymabaccus
       url: https://kaashif.co.uk
-
-contributors:
     - name: Dmitrii Pasechnik
+      url: http://pasechnik.info
 
 GAP: ">= 4.10"
 
@@ -37,9 +36,9 @@ packageinfo: https://gap-packages.github.io/RepnDecomp/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.0.1/RepnDecomp-1.0.1.tar.gz
+      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.1.0/RepnDecomp-1.1.0.tar.gz
     - name: .tar.bz2
-      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.0.1/RepnDecomp-1.0.1.tar.bz2
+      url: https://github.com/gap-packages/RepnDecomp/releases/download/v1.1.0/RepnDecomp-1.1.0.tar.bz2
 
 abstract: |
     The <span class='pkgname'>RepnDecomp</span> package provides functions implementing various algorithms for decomposing linear representations of finite groups.
@@ -51,27 +50,27 @@ keywords: |
     representations, groups.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>Hym19</span>]   <b class='BibAuthor'>Hymabaccus, K.</b>,
+    [<span class='BibKey'>HP20</span>]   <b class='BibAuthor'>Hymabaccus, K. and Pasechnik, D.</b>,
      <i class='BibTitle'>RepnDecomp, Decompose representations of finite groups into irreducibles,
-             Version 1.0.1</i>
-     (<span class='BibYear'>2019</span>)<br />
+             Version 1.1.0</i>
+     (<span class='BibYear'>2020</span>)<br />
     (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/RepnDecomp">https://gap-packages.github.io/RepnDecomp</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ RepnDecomp1.0.1,
-      author =           {Hymabaccus, K.},
+    @misc{ RepnDecomp1.1.0,
+      author =           {Hymabaccus, K. and Pasechnik, D.},
       title =            {{RepnDecomp},   Decompose  representations  of  finite
-                          groups into irreducibles, {V}ersion 1.0.1},
-      month =            {Dec},
-      year =             {2019},
+                          groups into irreducibles, {V}ersion 1.1.0},
+      month =            {Feb},
+      year =             {2020},
       note =             {GAP package},
       howpublished =     {\href      {https://gap-packages.github.io/RepnDecomp}
                           {\texttt{https://gap-packages.github.io/}\discretionary
                           {}{}{}\texttt{RepnDecomp}}},
       keywords =         {representations; groups},
-      printedkey =       {Hym19}
+      printedkey =       {HP20}
     }
 
